--- a/src/main/resources/FXML/CoopLobby.fxml
+++ b/src/main/resources/FXML/CoopLobby.fxml
@@ -4,12 +4,18 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
 <VBox alignment="CENTER" prefHeight="1080.0" prefWidth="1920.0" spacing="10" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="hoyocon.bomberman.CoopLobbyController">
     <padding><Insets bottom="20" left="20" right="20" top="20" /></padding>
     <Label style="-fx-font-size: 24px; -fx-font-weight: bold;" text="Co-op Lobby" />
+    <HBox alignment="CENTER" spacing="10">
+        <Label text="Server IP:" />
+        <TextField fx:id="ipField" promptText="Nhập IP server..." prefWidth="200" />
+        <Button onAction="#handleConnect" text="Kết nối" />
+    </HBox>
     <ListView fx:id="friendList" prefHeight="180" prefWidth="200" />
     <HBox alignment="CENTER" spacing="10">
         <Button onAction="#handleSendRequest" text="Send Request" />
